<resources>
    <string name="app_name">Smartsavr</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_home">Home</string>
    <string name="add_chore_title">Add Chore</string>
    <string name="edit_chore_title">Edit Chore</string>
    <string name="activity_add_child">Add a Child</string>
    <string name="activity_edit_profile">Edit %1$s\'s Profile</string>
    <string name="author_text">Created by Aaron Pradhan, Jackson Schilling, FNU Priyesh, Jiayi Ning, and Parth Khaladkar for CS 5520 at Northeastern University. Profile avatar images provided by Freepik.</string>
    <string name="add_a_child_action">Add a Child</string>
    <string name="log_out_action">Log Out</string>
    <string name="name_field_label">Name</string>
    <string name="weekly_allowance_field_label">Weekly Allowance</string>
    <string name="per_week">per week</string>
    <string name="dollar_sign">$</string>
    <string name="profile_picture_field_label">Profile Picture</string>
    <string name="acc_monkey">Monkey</string>
    <string name="acc_fox">Fox</string>
    <string name="chore_name_field_label">Chore Name</string>
    <string name="due_date_field_label">Due Date</string>
    <string name="due_time_field_label">Due Time</string>
    <string name="save_action">Save</string>
    <string name="reward_field_label">Reward <font color="#909090">(optional)</font></string>
    <string name="acc_calendar">Calendar</string>
    <string name="Add_a_Child"><u>Add a child</u> </string>
    <string name="reset_password"><u>Reset Password</u></string>
    <string name="sign_up_small"><u>Sign Up</u></string>
    <string name="log_in_small"><u>Log in</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="username_field_label">Username</string>
    <string name="password_field_label">Password</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="amount">Amount</string>
    <string name="you_haven_t_added_any_children_yet">You haven\'t added any children yet. <font color="blue"><u>Add a child to get started.</u></font></string>
    <string name="allowance_summary">Allowance Summary</string>
    <string name="chores_completed">Chores Completed:</string>
    <string name="current_balance">Current Balance:</string>
    <string name="completed_chores">Completed Chores</string>
    <string name="upcoming_chores">Upcoming Chores</string>
    <string name="allowance">\"Allowance: \"</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="smartsavr">Smartsavr</string>
    <string name="weekly_earnings">Weekly Earnings: %1$s</string>
    <string name="monthly_earnings">Monthly Earnings: %1$s</string>
    <string name="see_more"><u>See More</u></string>
    <string name="mark_done">Mark Done</string>
    <string name="tap_to_undo">Tap to Undo</string>
    <string name="modify_balance">Modify Balance</string>
    <string name="edit_chore">Edit Chore</string>
    <string name="no_chores">There are no chores in this list.</string>
    <string name="see_graphs"><u>See Graphs</u></string>
    <string name="channel_id">01</string>
    <string name="weekly_earning">Weekly Earnings: $</string>
    <string name="monthly_earning">Monthly Earnings: $</string>
</resources>
