<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SmartSavr"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/username"
        style="@style/EditTextStandard"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        style="@style/EditTextStandard"
        android:layout_marginTop="10dp"
        android:hint="@string/email_address"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        style="@style/EditTextStandard"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"/>

    <Button
        android:id="@+id/signup"
        style="@style/Button.Standard"
        android:layout_marginTop="10dp"
        android:text="Sign up"/>

    <TextView
        android:id="@+id/gotologin"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/log_in_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

   

   

</LinearLayout>