<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.northeasternproject.smartsavr.ChildLoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smartsavr"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/child_username"
        style="@style/EditTextStandard"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/password"
        style="@style/EditTextStandard"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/login"
        style="@style/Button.Standard"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="8dp"
        android:text="Log in using the credentials provided by your parents. They will need to create an account for you."
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginBottom="20dp"/>


</LinearLayout>