<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/modify_balance_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/modify_balance"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/radio_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modify_balance_title_text_view">

            <RadioButton
                android:id="@+id/add_balance_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/subtract_balance_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtract" />
        </RadioGroup>

        <TextView
            android:id="@+id/amount_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/amount_field_edit_text"
            android:text="@string/amount"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group" />

        <TextView
            android:id="@+id/dollar_sign_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/dollar_sign"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@id/amount_field_edit_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/amount_field_edit_text"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/ic_rounded_edit_text"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/save_allowance_button"
            app:layout_constraintStart_toEndOf="@id/dollar_sign_text_view"
            app:layout_constraintTop_toBottomOf="@id/amount_label_text_view"
            tools:text="5.00" />

        <Button
            android:id="@+id/save_allowance_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:letterSpacing="0"
            android:text="@string/save_action"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount_field_edit_text"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
