<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add_a_child_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:letterSpacing="0"
            android:text="@string/add_a_child_action"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/log_out_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@color/danger_red"
            android:letterSpacing="0"
            android:text="@string/log_out_action"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_a_child_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/author_text"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
