<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_field_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:labelFor="@id/name_field_edit_text"
                android:text="@string/name_field_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name_field_edit_text"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_field_label_text_view" />

            <TextView
                android:id="@+id/weekly_allowance_field_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:labelFor="@id/weekly_allowance_field_edit_text"
                android:text="@string/weekly_allowance_field_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_field_edit_text" />

            <TextView
                android:id="@+id/weekly_allowance_dollar_sign_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/dollar_sign"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/weekly_allowance_field_edit_text"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/weekly_allowance_field_edit_text"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="8dp"
                app:layout_constraintStart_toEndOf="@id/weekly_allowance_dollar_sign_text_view"
                app:layout_constraintTop_toBottomOf="@id/weekly_allowance_field_label_text_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/per_week"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/weekly_allowance_field_edit_text"
                app:layout_constraintStart_toEndOf="@id/weekly_allowance_field_edit_text"
                app:layout_constraintTop_toTopOf="@id/weekly_allowance_field_edit_text" />

            <TextView
                android:id="@+id/username_field_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:labelFor="@id/username_field_edit_text"
                android:text="@string/username_field_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weekly_allowance_field_edit_text" />

            <EditText
                android:id="@+id/username_field_edit_text"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_field_label_text_view" />

            <TextView
                android:id="@+id/password_field_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:labelFor="@id/password_field_edit_text"
                android:text="@string/password_field_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_field_edit_text" />

            <EditText
                android:id="@+id/password_field_edit_text"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_field_label_text_view" />

            <TextView
                android:id="@+id/profile_picture_field_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:text="@string/profile_picture_field_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_field_edit_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_picture_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_picture_field_label_text_view" />

            <Button
                android:id="@+id/save_child_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                android:letterSpacing="0"
                android:text="@string/save_action"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/profile_picture_recycler_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
