<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_field_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:labelFor="@id/name_field_edit_text"
            android:text="@string/name_field_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_field_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/ic_rounded_edit_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_field_label_text_view" />

        <TextView
            android:id="@+id/weekly_allowance_field_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:labelFor="@id/weekly_allowance_field_edit_text"
            android:text="@string/weekly_allowance_field_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_field_edit_text" />

        <TextView
            android:id="@+id/weekly_allowance_dollar_sign_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/dollar_sign"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@id/weekly_allowance_field_edit_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/weekly_allowance_field_edit_text"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/ic_rounded_edit_text"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@id/weekly_allowance_dollar_sign_text_view"
            app:layout_constraintTop_toBottomOf="@id/weekly_allowance_field_label_text_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/per_week"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/weekly_allowance_field_edit_text"
            app:layout_constraintStart_toEndOf="@id/weekly_allowance_field_edit_text"
            app:layout_constraintTop_toTopOf="@id/weekly_allowance_field_edit_text" />

        <TextView
            android:id="@+id/profile_picture_field_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/profile_picture_field_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weekly_allowance_field_edit_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_picture_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="10dp"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_picture_field_label_text_view"
            app:layout_constraintBottom_toTopOf="@id/save_child_button" />

<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:id="@+id/profile_picture_card_1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="18dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:checkable="true"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            app:cardElevation="8dp"-->
<!--            app:contentPadding="8dp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/profile_picture_field_label_text_view">-->

<!--            <ImageView-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="80dp"-->
<!--                android:contentDescription="@string/acc_monkey"-->
<!--                android:src="@drawable/asset_1" />-->
<!--        </com.google.android.material.card.MaterialCardView>-->

<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:id="@+id/profile_picture_card_2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="18dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:checkable="true"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            app:cardElevation="8dp"-->
<!--            app:contentPadding="8dp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/profile_picture_card_1">-->

<!--            <ImageView-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="80dp"-->
<!--                android:contentDescription="@string/acc_fox"-->
<!--                android:src="@drawable/asset_2" />-->
<!--        </com.google.android.material.card.MaterialCardView>-->

        <Button
            android:id="@+id/save_child_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:letterSpacing="0"
            android:text="@string/save_action"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
